<resources>
    <string name="app_name">Contact List</string>
    <string name="button_add_contact">Add Contact</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="menuitem_add_contact">Add Contact</string>
    <string name="menuitem_edit_contact">Edit Contact</string>
    <string name="menuitem_delete_contact">Delete Contact</string>
    <string name="address">Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">ZIP</string>
    <string name="hint_country">Country</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">ZIP:</string>
    <string name="label_country">Country:</string>
    <string name="search">Search&#8230;</string>
    <string name="countries">eyJJTSI6IklzbGUgb2YgTWFuIiwiSFIiOiJDcm9hdGlhIiwiR1ciOiJHdWluZWEtQmlzc2F1IiwiSU4iOiJJbmRpYSIsIktFIjoiS2VueWEiLCJMQSI6Ikxhb3MiLCJJTyI6IkJyaXRpc2ggSW5kaWFuIE9jZWFuIFRlcnJpdG9yeSIsIkhUIjoiSGFpdGkiLCJMQiI6IkxlYmFub24iLCJHWSI6Ikd1eWFuYSIsIktHIjoiS3lyZ3l6c3RhbiIsIkhVIjoiSHVuZ2FyeSIsIkxDIjoiU2FpbnQgTHVjaWEiLCJJUSI6IklyYXEiLCJLSCI6IkNhbWJvZGlhIiwiSk0iOiJKYW1haWNhIiwiSVIiOiJJcmFuIiwiS0kiOiJLaXJpYmF0aSIsIklTIjoiSWNlbGFuZCIsIk1BIjoiTW9yb2NjbyIsIkpPIjoiSm9yZGFuIiwiSVQiOiJJdGFseSIsIkpQIjoiSmFwYW4iLCJNQyI6Ik1vbmFjbyIsIktNIjoiQ29tb3JvcyIsIk1EIjoiTW9sZG92YSIsIkxJIjoiTGllY2h0ZW5zdGVpbiIsIktOIjoiU2FpbnQgS2l0dHMgJiBOZXZpcyIsIk1FIjoiTW9udGVuZWdybyIsIk5BIjoiTmFtaWJpYSIsIk1GIjoiU2FpbnQgTWFydGluIChGcmVuY2gpIiwiTEsiOiJTcmkgTGFua2EiLCJLUCI6Ik5vcnRoIEtvcmVhIiwiTUciOiJNYWRhZ2FzY2FyIiwiTkMiOiJOZXcgQ2FsZWRvbmlhIiwiTUgiOiJNYXJzaGFsbCBJc2xhbmRzIiwiS1IiOiJTb3V0aCBLb3JlYSIsIk5FIjoiTmlnZXIiLCJORiI6Ik5vcmZvbGsgSXNsYW5kIiwiTUsiOiJNYWNlZG9uaWEiLCJORyI6Ik5pZ2VyaWEiLCJNTCI6Ik1hbGkiLCJNTSI6Ik15YW5tYXIgKEJ1cm1hKSIsIkxSIjoiTGliZXJpYSIsIk5JIjoiTmljYXJhZ3VhIiwiS1ciOiJLdXdhaXQiLCJNTiI6Ik1vbmdvbGlhIiwiTFMiOiJMZXNvdGhvIiwiUEEiOiJQYW5hbWEiLCJNTyI6Ik1hY2F1IiwiTFQiOiJMaXRodWFuaWEiLCJLWSI6IkNheW1hbiBJc2xhbmRzIiwiTVAiOiJOb3J0aGVybiBNYXJpYW5hIElzbGFuZHMiLCJMVSI6Ikx1eGVtYm91cmciLCJOTCI6Ik5ldGhlcmxhbmRzIiwiS1oiOiJLYXpha2hzdGFuIiwiTVEiOiJNYXJ0aW5pcXVlIiwiTFYiOiJMYXR2aWEiLCJNUiI6Ik1hdXJpdGFuaWEiLCJQRSI6IlBlcnUiLCJNUyI6Ik1vbnRzZXJyYXQiLCJRQSI6IlFhdGFyIiwiTk8iOiJOb3J3YXkiLCJQRiI6IlRhaGl0aSAoRnJlbmNoIFBvbGluZXNpYSkiLCJNVCI6Ik1hbHRhIiwiTFkiOiJMaWJ5YSIsIk5QIjoiTmVwYWwiLCJQRyI6IlBhcHVhIE5ldyBHdWluZWEiLCJNVSI6Ik1hdXJpdGl1cyIsIlBIIjoiUGhpbGlwcGluZXMiLCJNViI6Ik1hbGRpdmVzIiwiT00iOiJPbWFuIiwiTlIiOiJOYXVydSIsIk1XIjoiTWFsYXdpIiwiTVgiOiJNZXhpY28iLCJQSyI6IlBha2lzdGFuIiwiTVkiOiJNYWxheXNpYSIsIk5VIjoiTml1ZSIsIlBMIjoiUG9sYW5kIiwiTVoiOiJNb3phbWJpcXVlIiwiUE0iOiJTYWludCBQaWVycmUgYW5kIE1pcXVlbG9uIiwiUE4iOiJQaXRjYWlybiIsIlJFIjoiUmV1bmlvbiIsIlNBIjoiU2F1ZGkgQXJhYmlhIiwiU0IiOiJTb2xvbW9uIElzbGFuZHMiLCJOWiI6Ik5ldyBaZWFsYW5kIiwiU0MiOiJTZXljaGVsbGVzIiwiU0QiOiJTdWRhbiIsIlBSIjoiUHVlcnRvIFJpY28iLCJTRSI6IlN3ZWRlbiIsIlBTIjoiUGFsZXN0aW5pYW4gVGVycml0b3J5LCBPY2N1cGllZCIsIlBUIjoiUG9ydHVnYWwiLCJTRyI6IlNpbmdhcG9yZSIsIlRDIjoiVHVya3MgYW5kIENhaWNvcyBJc2xhbmRzIiwiU0giOiJTYWludCBIZWxlbmEiLCJURCI6IkNoYWQiLCJTSSI6IlNsb3ZlbmlhIiwiUFciOiJQYWxhdSIsIlNKIjoiU3ZhbGJhcmQgYW5kIEphbiBNYXllbiBJc2xhbmRzIiwiVUEiOiJVa3JhaW5lIiwiUk8iOiJSb21hbmlhIiwiVEYiOiJGcmVuY2ggU291dGhlcm4gVGVycml0b3JpZXMiLCJTSyI6IlNsb3ZhayBSZXB1YmxpYyIsIlBZIjoiUGFyYWd1YXkiLCJURyI6IlRvZ28iLCJTTCI6IlNpZXJyYSBMZW9uZSIsIlRIIjoiVGhhaWxhbmQiLCJTTSI6IlNhbiBNYXJpbm8iLCJTTiI6IlNlbmVnYWwiLCJSUyI6IlNlcmJpYSAoWXVnb3NsYXZpYSkiLCJUSiI6IlRhamlraXN0YW4iLCJWQSI6IlZhdGljYW4gQ2l0eSIsIlNPIjoiU29tYWxpYSIsIlRLIjoiVG9rZWxhdSIsIlVHIjoiVWdhbmRhIiwiUlUiOiJSdXNzaWFuIEZlZGVyYXRpb24iLCJUTCI6IkVhc3QgVGltb3IiLCJWQyI6IlNhaW50IFZpbmNlbnQgJiB0aGUgR3JlbmFkaW5lcyIsIlRNIjoiVHVya21lbmlzdGFuIiwiU1IiOiJTdXJpbmFtZSIsIlJXIjoiUndhbmRhIiwiVE4iOiJUdW5pc2lhIiwiVkUiOiJWZW5lenVlbGEiLCJUTyI6IlRvbmdhIiwiU1QiOiJTYW8gVG9tZSAmIFByaW5jaXBlIiwiVkciOiJCcml0aXNoIFZpcmdpbiBJc2xhbmRzIiwiU1YiOiJFbCBTYWx2YWRvciIsIlVNIjoiVW5pdGVkIFN0YXRlcyBNaW5vciBPdXRseWluZyBJc2xhbmRzIiwiVFIiOiJUdXJrZXkiLCJWSSI6IlZpcmdpbiBJc2xhbmRzIChVUykiLCJXRiI6IldhbGxpcyBhbmQgRnV0dW5hIiwiVFQiOiJUcmluaWRhZCAmIFRvYmFnbyIsIlNZIjoiU3lyaWEiLCJTWiI6IlN3YXppbGFuZCIsIlRWIjoiVHV2YWx1IiwiVFciOiJUYWl3YW4iLCJWTiI6IlZpZXQgTmFtIiwiVVMiOiJVbml0ZWQgU3RhdGVzIChVU0EpIiwiVFoiOiJUYW56YW5pYSIsIllFIjoiWWVtZW4iLCJaQSI6IlNvdXRoIEFmcmljYSIsIlhLIjoiS29zb3ZvIiwiVVkiOiJVcnVndWF5IiwiVlUiOiJWYW51YXR1IiwiVVoiOiJVemJla2lzdGFuIiwiV1MiOiJTYW1vYSIsIlpNIjoiWmFtYmlhIiwiQUMiOiJBc2NlbnNpb24gSXNsYW5kIiwiQUQiOiJBbmRvcnJhIiwiWVQiOiJNYXlvdHRlIiwiQUUiOiJVbml0ZWQgQXJhYiBFbWlyYXRlcyIsIllVIjoiU2VyYmlhIGFuZCBNb250ZW5lZ3JvIiwiQkEiOiJCb3NuaWEgJiBIZXJ6ZWdvdmluYSIsIkFGIjoiQWZnaGFuaXN0YW4iLCJCQiI6IkJhcmJhZG9zIiwiQUciOiJBbnRpZ3VhICYgQmFyYnVkYSIsIkJEIjoiQmFuZ2xhZGVzaCIsIkFJIjoiQW5ndWlsbGEiLCJCRSI6IkJlbGdpdW0iLCJDQSI6IkNhbmFkYSIsIkJGIjoiQnVya2luYSBGYXNvIiwiQkciOiJCdWxnYXJpYSIsIlpXIjoiWmltYmFid2UiLCJBTCI6IkFsYmFuaWEiLCJDQyI6IkNvY29zIChLZWVsaW5nKSBJc2xhbmRzIiwiQkgiOiJCYWhyYWluIiwiQU0iOiJBcm1lbmlhIiwiQ0QiOiJDb25nbywgRGVtb2NyYXRpYyBSZXB1YmxpYyIsIkJJIjoiQnVydW5kaSIsIkFOIjoiTmV0aGVybGFuZHMgQW50aWxsZXMiLCJCSiI6IkJlbmluIiwiQU8iOiJBbmdvbGEiLCJDRiI6IkNlbnRyYWwgQWZyaWNhbiBSZXB1YmxpYyIsIkNHIjoiQ29uZ28iLCJBUSI6IkFudGFyY3RpY2EiLCJDSCI6IlN3aXR6ZXJsYW5kIiwiQk0iOiJCZXJtdWRhIiwiQVIiOiJBcmdlbnRpbmEiLCJDSSI6IkNvdGUgRCdJdm9pcmUgKEl2b3J5IENvYXN0KSIsIkJOIjoiQnJ1bmVpIERhcnVzc2FsYW0iLCJERSI6Ikdlcm1hbnkiLCJBUyI6IkFtZXJpY2FuIFNhbW9hIiwiQk8iOiJCb2xpdmlhIiwiQVQiOiJBdXN0cmlhIiwiQ0siOiJDb29rIElzbGFuZHMiLCJBVSI6IkF1c3RyYWxpYSIsIkNMIjoiQ2hpbGUiLCJFQyI6IkVjdWFkb3IiLCJDTSI6IkNhbWVyb29uIiwiQlIiOiJCcmF6aWwiLCJBVyI6IkFydWJhIiwiQ04iOiJDaGluYSIsIkVFIjoiRXN0b25pYSIsIkJTIjoiQmFoYW1hcyIsIkRKIjoiRGppYm91dGkiLCJBWCI6IkFsYW5kIElzbGFuZHMiLCJDTyI6IkNvbG9tYmlhIiwiQlQiOiJCaHV0YW4iLCJESyI6IkRlbm1hcmsiLCJFRyI6IkVneXB0IiwiQVoiOiJBemVyYmFpamFuIiwiRUgiOiJXZXN0ZXJuIFNhaGFyYSIsIkJWIjoiQm91dmV0IElzbGFuZCIsIkRNIjoiRG9taW5pY2EiLCJDUiI6IkNvc3RhIFJpY2EiLCJCVyI6IkJvdHN3YW5hIiwiR0EiOiJHYWJvbiIsIkRPIjoiRG9taW5pY2FuIFJlcHVibGljIiwiQlkiOiJCZWxhcnVzIiwiR0IiOiJVbml0ZWQgS2luZ2RvbSIsIkNVIjoiQ3ViYSIsIkJaIjoiQmVsaXplIiwiQ1YiOiJDYXBlIFZlcmRlIiwiR0QiOiJHcmVuYWRhIiwiRkkiOiJGaW5sYW5kIiwiR0UiOiJHZW9yZ2lhIiwiRkoiOiJGaWppIiwiQ1giOiJDaHJpc3RtYXMgSXNsYW5kIiwiR0YiOiJGcmVuY2ggR3VpYW5hIiwiRksiOiJGYWxrbGFuZCBJc2xhbmRzIChNYWx2aW5hcykiLCJDWSI6IkN5cHJ1cyIsIkdHIjoiR3Vlcm5zZXkiLCJDWiI6IkN6ZWNoIFJlcHVibGljIiwiR0giOiJHaGFuYSIsIkZNIjoiTWljcm9uZXNpYSIsIkVSIjoiRXJpdHJlYSIsIkdJIjoiR2licmFsdGFyIiwiRVMiOiJTcGFpbiIsIkZPIjoiRmFyb2UgSXNsYW5kcyIsIkVUIjoiRXRoaW9waWEiLCJHTCI6IkdyZWVubGFuZCIsIkRaIjoiQWxnZXJpYSIsIkdNIjoiR2FtYmlhIiwiSUQiOiJJbmRvbmVzaWEiLCJGUiI6IkZyYW5jZSIsIkdOIjoiR3VpbmVhIiwiSUUiOiJJcmVsYW5kIiwiSEsiOiJIb25nIEtvbmciLCJHUCI6Ikd1YWRlbG91cGUiLCJHUSI6IkVxdWF0b3JpYWwgR3VpbmVhIiwiSE0iOiJIZWFyZCBhbmQgTWNEb25hbGQgSXNsYW5kcyIsIkdSIjoiR3JlZWNlIiwiSE4iOiJIb25kdXJhcyIsIkpFIjoiSmVyc2V5IiwiR1MiOiJTb3V0aCBHZW9yZ2lhIGFuZCBTb3V0aCBTYW5kd2ljaCIsIkZYIjoiRnJhbmNlLCBNZXRyb3BvbGl0YW4iLCJHVCI6Ikd1YXRlbWFsYSIsIkdVIjoiR3VhbSIsIklMIjoiSXNyYWVsIn0=</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">This will permanently delete the contact</string>
    <string name="errorButton">OK</string>
    <string name="errorTitle">Contact Name is Required</string>
    <string name="errorMessage">You must enter a contact name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="updates">
	    Updates in this version:
	    \n- Painting.
	    \n- Description!!
	    \n- Description!!
	</string>
</resources>