<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >
        
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" >
        </EditText>
        
        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone" >
        </EditText>
        
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" >
        </EditText>
        
        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:paddingTop="10dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:color="@android:color/black" >
        </TextView>
        
        <EditText
            android:id="@+id/streetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_street"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress|textCapWords" >
        </EditText>
        
        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress|textCapWords" >
        </EditText>
        
        <EditText
            android:id="@+id/stateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_state"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress|textCapWords" >
        </EditText>
        
        <EditText
            android:id="@+id/zipEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_zip"
            android:imeOptions="actionNext"
            android:inputType="number" >
        </EditText>
        
        <EditText
            android:id="@+id/countryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress|textCapWords" >
            <!-- android:inputType="text|textCapWords" > -->
            <!-- android:inputType="textPersonName|textCapWords" > -->
        </EditText>
        
        <Button
            android:id="@+id/saveContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_save_contact" >
        </Button>
    </LinearLayout>
    
</ScrollView>